2014-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_delete, ea_transpose_chars): Handle 
	multi-byte characters.
	(ea_swap_chars, ea_remove_text): New static functions.

	(read_and_dispatch_in_echo_area)
	(echo_area_prep_read): Line invalidating echo area line map 
	moved between functions.

2014-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/window-split-dir.sh: New test.
	* info/t/star-note-non-whitespace.sh: New test.

2014-11-11  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: minimize function header comments, reorder,
	other comment cleanups.  No functional changes intended.

2014-11-10  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: do not call findprog on a user-defined $TEX.
	Report from Per Mildner, 10 Nov 2014 12:26:08.

2014-11-10  Jason Hood  <jadoxa@yahoo.com.au>  (tiny change)

	* install-info/install-info.c (reformat_new_entries): respect
	--maxwidth if given.

2014-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (find_invocation_node_by_nodename): New 
	function.
	(info_intuit_options_node): If passed Top node, call it to get a 
	new node to start at.  Return value to be freed by caller.  All 
	callers updated.
	* info/info.c (main, add_initial_nodes) 
	(invocation_program_name): For --show-options, save last 
	non-option argument to use as the name of the program.

2014-11-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (menu_digit): Unused argument removed.
	(read_key_sequence) <ea_possible_completions>: Exit function as 
	intended.

2014-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_forward, ea_backward): Go forward and 
	backward over multi-byte characters correctly.

	* info/filesys.c (convert_eols): Disable with preprocessor to 
	avoid warning about unused function.
	* info/pseudotty.c: Avoid compiler warnings about set but unused 
	variable and include <error.h> to get prototype of 'error'.
	
	* info/infodoc.c (HELP_NODE_GETS_REGENERATED)